--- a/README.rdoc
+++ b/README.rdoc
@@ -34,33 +34,30 @@ The story does not stop here... You can of course provide your own compilation m
 
 The ability to parse imperative blocks is a small visible feature of SByC. More generally, SByC is based on a functional engine that parses LISP inspired functional expressions:
 
-  code = lambda{ (concat "hello world", " ", (times "!", 3)) }
-  ast  = ::SByC::parse(code)
+  code = lambda{ (concat "hello ", (get :who), (times "!", 3)) }
+  ast  = ::SByC::parse(code)                    # => (concat ...)
 
-Parse trees may be analyzed by user-defined systems. A default ruby system is provided for typical tasks:
-
-  SByC::RubySystem.type_check(code)              # => String
-  SByC::RubySystem.execute(code)                 # => "hello world !!!"
-
-Creating such a system for your own needs starts with understanding the rewriter engine:
+Parse trees may be analyzed by user-defined systems. Creating such a system for your own needs starts with understanding the rewriter engine:
 
   # Evaluate the code above:
   rewriter = ::SByC::Rewriter.new {|r|
     r.rule(:concat)    {|r, node, *children|   children.collect{|c| r.apply(c)}.join("") }  
     r.rule(:capitalize){|r, node, who|         r.apply(who).capitalize                   }
     r.rule(:times)     {|r, node, who, times|  r.apply(who) * r.apply(times)             }
+    r.rule(:get)       {|r, node, what|        scope[r.apply(what)]                      }
     r.rule(:literal)   {|r, node|              node.literal                              }
   }
-  puts rewriter.rewrite(ast)                     # => "hello world !!!"
+  puts rewriter.rewrite(ast, :who => "SByC")      # => "hello SByC!!!"
   
   # Generate ruby code for the code above:
   rewriter = ::SByC::Rewriter.new {|r|
     r.rule(:concat)    {|r, node, *children|   children.collect{|c| r.apply(c)}.join(" + ") }  
     r.rule(:capitalize){|r, node, who|         "#{r.apply(who)}.capitalize()"               }
-    r.rule(:times)     {|r, node, who, times|  "(#{r.apply(who)} * #{r.apply(times)})"     }
+    r.rule(:times)     {|r, node, who, times|  "(#{r.apply(who)} * #{r.apply(times)})"      }
+    r.rule(:get)       {|r, node, what|        "scope[#{r.apply(what)}]"                    }
     r.rule(:literal)   {|r, node|              node.literal.inspect                         }
   }
-  puts rewriter.rewrite(ast)                     # "hello world" + " " + ("!" * 3)
+  puts rewriter.rewrite(ast)                     # "hello " + scope[:who] + ("!" * 3)
 
 == Roadmap
 
