--- a/README.rdoc
+++ b/README.rdoc
@@ -9,16 +9,16 @@ ATTENTION!!! This ruby library is under active development. Some of the examples
 SByC provides a safe, reusable, extensible, and non-intrusive (no monkey patching of Ruby core classes) implementation of block DSLs. The following styles are recognized:
 
   # Hash-style
-  SByC::parse{|t| (t[:x] > 5) & (t[:y] <= 10) }     # => (& (> (__scope_get__ :x), 5), (<= (__scope_get__ :y), 10))
+  SByC::parse{|t| (t[:x] > 5) & (t[:y] <= 10) }     # => (& (> (? :x), 5), (<= (? :y), 10))
   
   # Object-style
-  SByC::parse{|t| (t.x > 5) & (t.y <= 10)     }     # => (& (> (__scope_get__ :x), 5), (<= (__scope_get__ :z), 10))
+  SByC::parse{|t| (t.x > 5) & (t.y <= 10)     }     # => (& (> (? :x), 5), (<= (? :z), 10))
   
   # Context-style
-  SByC::parse{ (x > 5) & (y <= 10)            }     # => (& (> (__scope_get__ :x), 5), (<= (__scope_get__ :z), 10))
+  SByC::parse{ (x > 5) & (y <= 10)            }     # => (& (> (? :x), 5), (<= (? :z), 10))
 
   # Functional-style
-  SByC::parse{ (both (gt x, 5), (lte y, 10))  }     # => (both (gt (__scope_get__ :x), 5), (lte (__scope_get__ :z), 10))
+  SByC::parse{ (both (gt x, 5), (lte y, 10))  }     # => (both (gt (? :x), 5), (lte (? :z), 10))
 
 The parsing stage returns a functional Abstract Syntax Tree, which can be passed to a next stage (rewriting, evaluation, compilation or whatever). Shortcuts for common next-stages are already proposed:
 
@@ -44,16 +44,16 @@ The parsing stage returns a functional Abstract Syntax Tree, which can be passed
 
 * SByC does not uses ruby2ruby or similar libraries to get an AST. It simply executes the block inside a specific DSL. Therefore, ruby expressions on literals will be evaluated at parsing time, according to operator precedence and ordering:
   
-    SByC::parse{ x + 12 + 17     }                  # => (+ (+ (__scope_get__ :x), 12), 17)
-    SByC::parse{ x + (12 + 17)   }                  # => (+ (__scope_get__ :x), 29)
-    SByC::parse{ (x + 12) + 17   }                  # => (+ (+ (__scope_get__ :x), 12), 17)
+    SByC::parse{ x + 12 + 17     }                  # => (+ (+ (? :x), 12), 17)
+    SByC::parse{ x + (12 + 17)   }                  # => (+ (? :x), 29)
+    SByC::parse{ (x + 12) + 17   }                  # => (+ (+ (? :x), 12), 17)
 
 * For the same reason, only operators that rely on overridable methods are recognized. In particular, the following expressions will NOT work:
 
-    SByC::parse{ x and y }                          # => (__scope_get__ :y)
-    SByC::parse{ x && y  }                          # => (__scope_get__ :y)
-    SByC::parse{ x or y  }                          # => (__scope_get__ :x)
-    SByC::parse{ x || y  }                          # => (__scope_get__ :x)
+    SByC::parse{ x and y }                          # => (? :y)
+    SByC::parse{ x && y  }                          # => (? :y)
+    SByC::parse{ x or y  }                          # => (? :x)
+    SByC::parse{ x || y  }                          # => (? :x)
     SByC::parse{ not(x)  }                          # => false
     SByC::parse{ !x      }                          # => false
 
